--- a/liquidwar6/doc/cli-doxygen.texi
+++ b/liquidwar6/doc/cli-doxygen.texi
@@ -216,9 +216,9 @@ Structure containing both the thread running an OOB request and its data. It was
 @end deftp
 
 @defcv {Member} {lw6cli_oob_s} {thread}
-@strong{Type:} @code{void *}
+@strong{Type:} @code{lw6sys_thread_handler_t *}
 
-@strong{Definition:} @code{void* lw6cli_oob_s::thread}
+@strong{Definition:} @code{lw6sys_thread_handler_t* lw6cli_oob_s::thread}
 
 
 Pointer on thread running the OOB request.         
