--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2012-01-22 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Fixed #35349, segfault in screenshot generation.
+
 	* Fixed p2p and thread/mutex API. 
 
 2012-01-21 : Christian Mauduit <ufoot@ufoot.org>
