--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-24 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Removed intermediate autotools file from git.
+
 2012-01-22 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed #35349, segfault in screenshot generation.
